--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,10 @@
 /* Author: Griffin Mareske */
 
-body {
+html,body {
     margin:0;
-    max-width: 100%;
     width: 100%;
     height: 100%;
     background-color: rgb(252,158,79);
-}
-.page {
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
 }
 .section {
     display: flex;
@@ -22,19 +16,33 @@ body {
     font-family: 'Lato', sans-serif;
     font-size: 1.2em;
     overflow: hidden;
+    height: 100%;
+    min-height: 100%;
 }
-
+a {
+    text-decoration: none;
+}
 h1 {
     font-family: 'Atomic Age', cursive;
+    font-size: 3em;
+    margin: 0;
 }
-/* individual sections styles */
-#big-header {
-    height: 40%;
+h3 {
+    font-size: 1.5em;
+    margin: 0;
 }
-#record-player {
-    height: 60%;
+.down-btn {
+    color: inherit;
 }
 
+/* individual sections styles */
+#big-header {
+
+}
+#about {
+    color: rgb(2,1,34);
+    background: rgb(230,230,230);
+}
 /* record player styling */
 @keyframes spin {
     from {transform:rotate(0deg); }
@@ -81,4 +89,19 @@ h1 {
     width: 10%;
     height: 10%;
     background: rgb(230, 230, 230);
+}
+
+/* portait photo */
+.portrait-photo {
+    height: 12em;
+    width: 10em;
+    margin: 0 0 0.5em 0;
+    border: 10px dotted rgb(230,230,230);
+    border-radius: 50%;
+    &:after {
+	height: 30%;
+	width: 30%;
+	background: rgb(230,230,230);
+    }
+
 }
