--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ html,body {
     color: rgb(230,230,230);
     text-align: center;
     font-family: 'Lato', sans-serif;
-    font-size: 1.2em;
+    font-size: 1.1em;
     overflow: hidden;
     height: 100%;
     min-height: 100%;
@@ -24,11 +24,11 @@ a {
 }
 h1 {
     font-family: 'Atomic Age', cursive;
-    font-size: 3em;
-    margin: 0;
+    font-size: 2.75em;
+    margin: 0.2em 0 0 0;
 }
 h3 {
-    font-size: 1.5em;
+    font-size: 1.3em;
     margin: 0;
 }
 .down-btn {
