--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,11 @@ html,body {
     width: 100%;
     height: 100%;
     background-color: rgb(252,158,79);
+    scroll-behavior: smooth;
 }
 .section {
     display: flex;
+    position: relative;
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
@@ -15,12 +17,28 @@ html,body {
     text-align: center;
     font-family: 'Lato', sans-serif;
     font-size: 1.1em;
-    overflow: hidden;
+    /* overflow: hidden; */
     height: 100%;
     min-height: 100%;
 }
+.section::before,
+.section::after {
+    position: absolute;
+    content: '';
+    pointer-events: none;
+}
+.section::after {
+    left: 50%;
+    top: 80%;
+    width: 8em;
+    height: 8em;
+    transform: translateX(-50%) rotate(45deg);
+    -webkit-transform: translateX(-50%) rotate(45deg);
+    /* box-shadow: 1px 0px rgb(2,1,34); */
+}
 a {
     text-decoration: none;
+    color: rgb(255,111,65);
 }
 h1 {
     font-family: 'Atomic Age', cursive;
@@ -36,11 +54,17 @@ h3 {
 }
 
 /* individual sections styles */
-#big-header {
-
+#big-header.section::after {
+    z-index: -1;
+    background: rgb(252,158,79);
 }
 #about {
+    z-index: -2; /*underneath the triangle from previous div */
     color: rgb(2,1,34);
+    background: rgb(230,230,230);
+}
+#about.section::after {
+    z-index: -3;
     background: rgb(230,230,230);
 }
 /* record player styling */
@@ -67,6 +91,8 @@ h3 {
     box-shadow: 1px 1px #212121;
 }
 .record-disc {
+    position: relative;
+    z-index: 3;
     width: 13em;
     height: 13em;
     background: linear-gradient(to right, #363636 0%, #666666 40%, #616161 60%, #1f1e1f 100%);
