--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,9 @@ a {
     text-decoration: none;
     color: rgb(255,111,65);
 }
+ul {
+    list-style-type: none;
+}
 h1 {
     font-family: 'Atomic Age', cursive;
     font-size: 2.75em;
@@ -148,4 +151,26 @@ h3 {
 	background: rgb(230,230,230);
     }
 
+}
+
+/* Social media links and stuff */
+#contact a {
+    color: inherit
+}
+.contact-list {
+    padding: 0 2vw 0 2vw;
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: center;
+}
+.contact-list a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1vw;
+    height: 10vh;
+    width: 10vh;
+    border: 2px solid rgb(230,230,230);
+    border-radius: 10px;
 }
