--- a/css/style.css
+++ b/css/style.css
@@ -1,102 +1,89 @@
 /* Author: Griffin Mareske */
+/* font-family: 'Titillium Web', sans-serif; */
+/* font-family: 'Open Sans', sans-serif; */
 
 html,body {
+    display: flex;
+    justify-content: center;
     margin:0;
     width: 100%;
     height: 100%;
-    background-color: rgb(252,158,79);
+    background: #fdf9f3;
     scroll-behavior: smooth;
 }
-.section {
-    display: flex;
-    position: relative;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
-    color: rgb(230,230,230);
-    text-align: center;
-    font-family: 'Lato', sans-serif;
-    font-size: 1.1em;
-    /* overflow: hidden; */
-    height: 100%;
-    min-height: 100%;
+hr {
+    border: 0;
+    height: 1px;
+    background: linear-gradient(to right, rgba(54,54,54,0), rgba(54,54,54,0.75), rgba(54,54,54,0));
 }
-.section::before,
-.section::after {
-    position: absolute;
-    content: '';
-    pointer-events: none;
-}
-.section::after {
-    left: 50%;
-    top: 90%;
-    width: 15vh;
-    height: 15vh;
-    transform: translateX(-50%) rotate(45deg);
-    -webkit-transform: translateX(-50%) rotate(45deg);
-    /* box-shadow: 1px 0px rgb(2,1,34); */
-}
-a {
-    text-decoration: none;
-    color: rgb(255,111,65);
-}
-ul {
-    list-style-type: none;
-    padding: 0;
-}
-h1,h2 {
-    font-family: 'Atomic Age', cursive;
-    margin: 0 0 0.2em 0;
-}
-h1 {
-    font-size: 2.75em;
-}
-h2 {
-    font-size: 2em;
-}
-h3 {
-    font-size: 1.3em;
-    margin: 0;
-}
-.down-btn {
-    color: inherit;
-}
-
-/* individual sections styles */
-#big-header.section::after {
-    z-index: -1;
-    background: rgb(252,158,79);
-}
-#about {
-    z-index: -2; /* underneath the triangle from previous div */
-    color: rgb(2,1,34);
-    background: rgb(230,230,230);
-}
-#about.section::after {
-    z-index: -3; /* approaching terrible hack level */
-    background: rgb(230,230,230);
-}
-#projects {
-    z-index: -4;
-    color: rgb(2,1,34);
-    background: rgb(242,243,174);
-}
-#projects.section::after {
-    z-index: -5; /* approaching terrible hack level */
-    background: rgb(242,243,174);
-}
-#timeline {
-    z-index: -6;
-    color: rgb(2,1,34);
-    background: rgb(237,211,130);
-}
-#timeline.section::after {
-    z-index: -7;
-    background: rgb(237,211,130);
-}
-#contact.section::after {
+.hide {
     display: none;
 }
+.container {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-evenly;
+    font-family: 'Open Sans', sans-serif;
+    color: #363636;
+    font-size: 16px:
+    height: 100%;
+    width: 100%;
+}
+.text-container {
+    flex-flow: column nowrap;
+}
+.text {
+}
+h1,h2,h3 {
+    font-family: 'Titillium Web', sans-serif;
+}
+h1 {
+    text-align: center;
+    font-size: 48px;
+}
+p.header {
+    text-align: center;
+}
+ul {
+    list-style: none;
+}
+li {
+    margin: 0.2em;
+}
+a {
+    color: #6669d9;
+    text-decoration: none;
+}
+a h1 {
+    color: #363636;
+}
+a:visited {
+    color: #6669D9;
+}
+
+.link-list {
+    list-style: upper-roman;
+    text-decoration: bold;
+}
+.link-list span {
+    color: #6669d9;
+    cursor: pointer;
+}
+#back-btn {
+    font-size: 20px;
+    cursor: pointer;
+}
+.social-list li {
+    display: inline-block;
+    margin-right: 0.4em;
+    margin-left: 0.4em;
+}
+.social-list li a {
+    color: #363636;
+}
+
+/* graphics styling */
 /* record player styling */
 @keyframes spin {
     from {transform:rotate(0deg); }
@@ -113,8 +100,9 @@ h3 {
     position: relative;
     z-index: 100;
     width: 70%;
-    background: #a3a2ae;
-    height: 1em;
+    background: #fdf9f3;
+    border: 1px solid #363636;
+    height: 15px;
     transform: rotate(-45deg);
     transform-origin: 100% 50%;
     animation: needle-swing 2s linear;
@@ -125,7 +113,8 @@ h3 {
     z-index: 3;
     width: 13em;
     height: 13em;
-    background: linear-gradient(to right, #363636 0%, #666666 40%, #616161 60%, #1f1e1f 100%);
+    background: linear-gradient(to right, #fdf9f3 0%, #e3e0da 40%, #ccc9c4 60%, #fdf9f3 100%);
+    border: 1px solid #363636;
 }
 .record-disc, .record-disc div {
     border-radius: 50%;
@@ -134,96 +123,43 @@ h3 {
 .record-image {
     position: relative;
     top: 30%; left: 30%;
-    width: 40%;
-    height: 40%;
-    background: rgb(234, 243, 174);
-    /* border: 2px solid #212121; */
+    width: 39%;
+    height: 39%;
+    background: #fdf9f3;
+    border: 1px solid #363636;
 }
 .record-pin {
     position: relative;
     top: 45%; left: 45%;
     width: 10%;
     height: 10%;
-    background: rgb(230, 230, 230);
+    background: #363636;
 }
 
-/* portait photo */
-.portrait-photo {
-    height: 12em;
-    width: 10em;
-    margin: 0 0 0.5em 0;
-    border: 10px dotted rgb(230,230,230);
-    border-radius: 50%;
-    &:after {
-	height: 30%;
+
+@media only screen and (max-width: 600px) {
+    body {
+	margin: 0 0.2em 0 0.2em;
+    }
+    .container {
+	flex-flow: column nowrap;
+    }
+    h1 {
+	font-size: 32px;
+    }
+}
+
+@media only screen and (min-width: 800px) {
+    .record-disc {
+	height: 16em;
+	width: 16em;
+    }
+    .text-container {
 	width: 30%;
-	background: rgb(230,230,230);
-    }
-}
-.about-text {
-    max-width: 90%;
-}
-/* projects page */
-.projects-section {
-    margin: 1vh 0 1vh 0;
-}
-.projects-list {
-    margin: 0 1vw 0 1vw;
-}
-.projects-list li {
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    justify-content: space-between;
-    margin: 1vh 0 0 0;
-}
-.projects-list li:last-child {
-    justify-content: center;
-}
-.projects-list a {
-    margin: 0 0 0 0.2em;
-}
-/* personal timeline */
-.timeline-wrapper>li {
-    margin: 1vw;
-}
-.timeline-block>* {
-    margin: 0 1vw 0 1vw;
-}
-.timeline-date {
-
-}
-.timeline-title {
-
-}
-.timeline-content {
-
-}
-/* Social media links and stuff */
-#contact a {
-    color: inherit
-}
-.contact-list {
-    padding: 0 2vw 0 2vw;
-    display: flex;
-    flex-flow: row wrap;
-    align-items: center;
-    justify-content: center;
-}
-.contact-list a {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 1vw;
-    height: 10vh;
-    width: 10vh;
-    border: 2px solid rgb(230,230,230);
-    border-radius: 10px;
 }
 
-/* Media Queries */
-@media (min-width: 800px) {
-    .section {
-	font-size: 2em;
-    }
+@media only screen and (min-width: 1200px) {
+    .record-disc {
+	height: 18em;
+	width: 18em;
 }
