--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,11 @@ html,body {
     background: #fdf9f3;
     scroll-behavior: smooth;
 }
-hr {
-    border: 0;
-    height: 1px;
-    background: linear-gradient(to right, rgba(54,54,54,0), rgba(54,54,54,0.75), rgba(54,54,54,0));
-}
+/* hr { */
+/*     border: 0; */
+/*     height: 1px; */
+/*     background: linear-gradient(to right, rgba(54,54,54,0), rgba(54,54,54,0.75), rgba(54,54,54,0)); */
+/* } */
 .hide {
     display: none;
 }
