--- a/css/style.css
+++ b/css/style.css
@@ -35,9 +35,7 @@ html,body {
 }
 .text {
 }
-h1,h2,h3 {
-    font-family: 'Titillium Web', sans-serif;
-}
+
 h1 {
     text-align: center;
     font-size: 48px;
@@ -141,6 +139,13 @@ a:visited {
 
 
 @media only screen and (max-width: 600px) {
+    .record-disc {
+	height: 10em;
+	width: 10em;	
+    }
+    .record-needle {
+	width: 60%;
+    }
     body {
 	margin: 0 0.2em 0 0.2em;
     }
@@ -150,6 +155,9 @@ a:visited {
     h1 {
 	font-size: 32px;
     }
+    .text-container {
+	width: 95%;
+    }
 }
 
 @media only screen and (min-width: 800px) {
@@ -158,7 +166,7 @@ a:visited {
 	width: 16em;
     }
     .text-container {
-	width: 30%;
+	width: 50%;
 }
 
 @media only screen and (min-width: 1200px) {
