--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,9 @@ html,body {
     width: 100%;
 }
 .text-container {
+    align-items: center;
     flex-flow: column nowrap;
+    height: 100%;
 }
 .text {
 }
@@ -39,6 +41,7 @@ html,body {
 h1 {
     text-align: center;
     font-size: 48px;
+    margin-bottom: 10px;
 }
 p.header {
     text-align: center;
